make-a-wish-salesforce/src/objects/VisualAntidote__Form_Migration__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__ApprovedBy__c</fullName>
        <label>ApprovedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Form_Migration</relationshipLabel>
        <relationshipName>Form_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__SourceOrgName__c</fullName>
        <label>SourceOrgName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Form Migration</label>
    <nameField>
        <displayFormat>FM-{0}</displayFormat>
        <label>Form_Migration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form_Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>